# TremorComputerVision

./: .gitignore  README.md  pyproject.toml
figdata/: displacements.csv  hum_displacements_models.csv  hum_patient_info.csv  hum_spectra_characteristics.pkl  human_peaks_table.csv  info.CSV  sim_acc_angles_apple.npy  sim_acc_angles_blender.npy  sim_amp_lin_ground_truth.csv  sim_lin_amp_increase_appleCV.csv
figures/: figure_frequency_vs_amplitude_final.py  figure_tetras_vs_amplitude_final.py  suppl_table_1_and_2.py
rawdata/human/apple_vision/: 001.pkl  002.pkl  003.pkl  004.pkl  005.pkl  006.pkl  007.pkl  008.pkl  009.pkl  010.pkl  011.pkl  012.pkl  013.pkl  014.pkl  015.pkl  016.pkl  017.pkl  018.pkl  019.pkl  020.pkl
rawdata/human/imu/: 001.pkl  002.pkl  003.pkl  004.pkl  005.pkl  006.pkl  007.pkl  008.pkl  009.pkl  010.pkl  011.pkl  012.pkl  013.pkl  014.pkl  015.pkl  016.pkl  017.pkl  (+3 more)
scripts/: boxplots_raw_pca_emd.py  fig1_acc_angles.py  fig1_amp_angles.py  fig2_amp_over_time.py  fig2_amplitude_estimation.py  fig2_model_amp_lin_increase.py  fig3_and_fig4_human_amplitudes.py  fig5_tetras_vs_amplitude_final.py  fig6_frequencies_correlation.py  fig6_frequencies_new.py  fig6_frequency_estimation_raw_pca_emd.py  fig7_frequency_vs_amplitude_final.py  fig_01.py  fig_error_perc.py  figure_human_amplitudes_final.py  suppl_fig7_frequency_vs_amplitude_final.py  suppl_fig_5_omc_vs_imu_frequencies.py  table1_frequencies.py  table2_frequencies.py  table_frequencies.py
src/: MpHandAnalyst.py  config.py  utls.py
tables/: table_1.md  table_2.md  table_frequencies_raw.md
(+40 files in other folders)
